# university

./: README.md
algorithm/diagrams/: diagram.py  diagrams.js  package.json
algorithm/exam/: main.py
algorithm/lw1/: QA.md  Отчет 1.docx
algorithm/lw2/: QA.md  main.py  Отчет 2.docx
algorithm/lw3/: QA.md  Отчет 3.docx
algorithm/lw4/: main.py
algorithm/lw5/: QA.md  main.py  Отчет 5.docx
algorithm/lw6/: QA.md
algorithm/lw7/: file.txt  main.py
algorithm/lw8/: main.py
c++/lab1/: fio.cpp
c++/lab2/: lab2-for.cpp  lab2-while.cpp
c++/lab4/: lab4.cpp
course-1-2/graphic/: .xdp-pdf.pdf-IklWXf  .xdp-png.png-P7b7xf  .xdp-svg.svg-lzlz4Y
course-1-2/lab1/: 4.py
course-1-2/lab2/: excel.xlsx
course-1-2/lab3/: main.py
course-2-1/db/: docker-compose.yaml
course-2-2/blender/: todo
course-2-2/bshd/: ~$ИДЗ.docx  ИДЗ.docx  Лабораторная работа БЖД.docx
course-2-2/en/: 1  2  3  4  4.1  5
course-2-2/rights/: ИДЗ.docx
course-3-1/c++/cw/: CMakeLists.txt  main.cpp
course-3-1/c++/cw/docs/: ~$$Курсовая работа.~vsdx  ~$рсовая работа.docx  ~$рсовая работа1-0.docx  Курсовая работа.docx  Курсовая работа.vsdx  Курсовая работа1-0.docx
course-3-1/philosophy/: ИДЗ.docx
db/: Makefile
dm/lab1/: 1.py  2.py  3.py  Отчет.docx
dm/lab3/: excel.xlsx
dm/lab4/: .~lock.excel.xlsx#  excel.xlsx
dm/pw1/: 3.py  4.py  5.py  7.py  Отчет.docx
dm/pw2/: Отчет.docx
dm/pw3/: main.py  (+1 more)
it/c++/: CMakeLists.txt
it/c++/lab1/docs/: Лабораторная работа №1.docx
it/c++/lab2/: lab2-for.cpp  lab2-while.cpp
it/c++/lab3/: lab3.cpp
it/c++/lab4/: desc.txt  lab4.cpp  out.txt
(+282 files in other folders)
